git ignore init

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 Test/
 *.back
 module-info.java
-Programmers/\354\212\244\355\202\254\354\262\264\355\201\254/"
+Programmers/\354\212\244\355\202\254\354\262\264\355\201\254/
 
 ### Eclipse ###
 .metadata
